--- a/src/components/Map/MapPage.css
+++ b/src/components/Map/MapPage.css
@@ -43,3 +43,12 @@
 .sidebar-item.active .label {
   font-weight: medium;
 }
+
+.map-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  border-left: 1px solid #d3d3d3; /* Line between sections */
+  padding-left: 20px;
+}
