--- a/src/components/Quiz/SummaryPage.css
+++ b/src/components/Quiz/SummaryPage.css
@@ -10,8 +10,8 @@
 
 .summary-page h2 {
   font-size: 2rem;
-  font-weight: 600;
-  color: #4f46e5;
+  /* font-weight: 600; */
+  /* color: #4f46e5; */
   margin-bottom: 20px;
 }
 
@@ -43,6 +43,30 @@
 .summary-page button:active {
   transform: translateY(2px);
   background-color: #3b40ce;
+}
+
+.quiz-summary-content {
+  margin-left: 40px;
+  background-image: url("../../../public/images/hero-veges.jpg");
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  width: 100%;
+  height: 400px; /* Adjust the height */
+  position: relative;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  margin-bottom: 20px;
+}
+
+.quiz-summary-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
 
 /* Responsive Design */
