--- a/src/components/Quiz/QuizPage.css
+++ b/src/components/Quiz/QuizPage.css
@@ -1,17 +1,16 @@
 .quiz-container {
   width: 100%;
-  max-height: 80vh;
   display: flex;
   justify-content: space-between;
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
-  text-align: left; /* Ensures all text is left-aligned */
+  text-align: left;
 }
 
 .question-section,
 .solution-section {
-  text-align: left; /* Aligns text to the left */
+  text-align: left;
 }
 
 /* .question-section {
@@ -140,6 +139,6 @@ button:hover {
 /* Styles for the h4 elements (section headers) */
 .solution-section h4 {
   font-weight: medium;
-  font-size: 16px; /* Slightly smaller than h3 */
+  /* font-size: 16px; Slightly smaller than h3 */
   margin-bottom: 5px;
 }
