--- a/src/components/Recommend/InputBar.css
+++ b/src/components/Recommend/InputBar.css
@@ -6,7 +6,7 @@
   border: 1.5px solid #ececec;
   border-radius: 50px;
   padding: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
   max-width: 70vw;
   margin: 30px auto;
   background-color: #fff;
@@ -91,4 +91,46 @@
     margin-left: 0;
     margin-top: 15px;
   }
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
+
+.result {
+  width: 80vw;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  margin-top: 20px;
+  text-align: left;
+  margin: 20px auto;
+}
+
+.result h4 {
+  font-weight: 500;
+}
+
+.result span {
+  font-size: 24px;
+  color: #6366f1;
+}
+
+.result p {
+  font-size: 18px;
+  font-weight: 400;
+  text-align: left;
+}
+
+button[disabled] {
+  width: 140px;
+  background-color: #ccc; /* Lighten the button when disabled */
+  cursor: not-allowed; /* Change the cursor to indicate it's disabled */
+  color: #666; /* Make text color lighter */
+}
+
+.disabled-button {
+  background-color: #ccc; /* Visual change for disabled state */
+  cursor: not-allowed;
+  color: #666;
 }
