--- a/src/components/Recommend/Recommend.css
+++ b/src/components/Recommend/Recommend.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 40px;
+  padding: 40px 0;
   min-height: 100vh;
   margin-top: 20px;
 }
@@ -10,7 +10,6 @@
 .input-bar-container {
   flex: 1;
   padding: 20px;
-  margin-right: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,6 +21,23 @@
   grid-template-columns: repeat(3, 1fr); /* 3 cards per row */
   gap: 40px;
   padding-top: 20px;
+}
+
+.recommend-container {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+}
+
+.recommend-box {
+  /* flex: 1; */
+  width: 200px;
+  height: 190px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
 }
 
 .recommend-content {
