--- a/src/components/Recommendations/FilterDropdown.css
+++ b/src/components/Recommendations/FilterDropdown.css
@@ -57,11 +57,15 @@
   color: black;
   position: absolute;
   top: 5px;
-  right: 20px;
+  right: 10px;
   background: none;
   border: none;
   font-size: 24px;
   cursor: pointer;
+}
+
+.close-button:hover {
+  background: transparent;
 }
 
 /* Ensure the inner country dropdown is visible */
