--- a/src/components/Recommend/InputBar.css
+++ b/src/components/Recommend/InputBar.css
@@ -1,5 +1,4 @@
 .recommend-input-bar {
-  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -7,15 +6,19 @@
   border-radius: 50px;
   padding: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
-  max-width: 70vw;
+  width: 900px;
   margin: 30px auto;
   background-color: #fff;
+  padding-left: 20px;
 }
 
 .recommend-input-bar .form-group {
-  margin: 0 15px;
+  margin: 0 10px;
   flex-grow: 1;
-  padding-right: 25px;
+  padding-right: 10px;
+  display: flex; /* Added to allow flexible alignment */
+  flex-direction: column; /* Align children vertically */
+  align-items: flex-start; /* Align to the left */
 }
 
 .recommend-input-bar .form-group label {
@@ -36,7 +39,7 @@
   background-color: transparent;
   font-size: 15px;
   text-align: left;
-  width: 100%;
+  width: 125px;
   padding-top: 6px;
   outline: none;
   transition: border-bottom-color 0.3s ease; /* Smooth underline transition */
@@ -99,7 +102,7 @@
 }
 
 .result {
-  width: 80vw;
+  /* width: 80vw; */
   padding: 20px;
   border-bottom: 1px solid #ccc;
   margin-top: 20px;
