--- a/src/components/Map/ViolationPage.css
+++ b/src/components/Map/ViolationPage.css
@@ -130,9 +130,11 @@
 }
 
 .link-page {
+  font-size: 16px;
+  margin-top: 20px;
   width: 600px;
   text-align: left;
-  background-color: #f9f9f9; /* Light background color for the box */
+  /* background-color: #f9f9f9; */
   padding: 15px;
   border: 1px solid #ddd; /* Light border around the box */
   border-radius: 5px; /* Rounded corners for the box */
