--- a/src/components/Recommend/InputBar.css
+++ b/src/components/Recommend/InputBar.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border: 1.5px solid #ececec;
+  border: 1px solid #c9cbcc;
   border-radius: 50px;
   padding: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
